Make 'make test' a bit cleaner

--- a/dice/Makefile
+++ b/dice/Makefile
@@ -2,15 +2,17 @@ CC=clang
 CFLAGS=-Wall -Werror -Wpedantic -std=c17 -O3 -flto
 TARGETS=dice
 
-.PHONY: all clean
+.PHONY: all test clean
 
 all: $(TARGETS)
 
 %: %.c
 	$(CC) $(CFLAGS) -o $@ $<
 
-test:
-	$(CC) $(CFLAGS) -DTEST_MODE dice.c -o dice
+test: dice_test
+
+dice_test: dice.c
+	$(CC) $(CFLAGS) -DTEST_MODE $< -o $@
 
 clean:
-		$(RM) $(TARGETS)
+		$(RM) $(TARGETS) dice_test
